# canvas

./: .gitignore  CMakeLists.txt  CMakePresets.json
Modules/: ArtDictionary.cmake  BuildPlugins.cmake  CMakeLists.txt
canvas/: CMakeLists.txt  ReflexTools_t.cc
canvas/DictionaryManager/: CMakeLists.txt  RootDictionaryManager.cc  RootDictionaryManager.h
canvas/IO/: CMakeLists.txt
canvas/IO/Root/: CMakeLists.txt
canvas/IO/Root/CLHEPDictionaries/: classes.h
canvas/IO/Root/CetlibDictionaries/: classes.h  classes_def.xml
canvas/IO/Root/Common/: AssnsStreamer.h  CacheStreamers.cc  CacheStreamers.h  RefCoreStreamer.cc  RefCoreStreamer.h  classes_def.xml  setPtrVectorBaseStreamer.cc  setPtrVectorBaseStreamer.h
canvas/IO/Root/Provenance/: BranchDescriptionStreamer.cc  BranchDescriptionStreamer.h  CMakeLists.txt  DictionaryChecker.cc  ProductIDStreamer.cc  ProductIDStreamer.h  TransientStreamer.cc  TransientStreamer.h  TypeTools.cc  TypeTools.h  TypeWithDict.cc  TypeWithDict.h  classes.h  classes_def.xml
canvas/Persistency/: CMakeLists.txt
canvas/Persistency/CLHEPDictionaries/: classes.h
canvas/Persistency/CetlibDictionaries/: classes.h  classes_def.xml
canvas/Persistency/Common/: Assns.h  AssnsAlgorithms.h  AssnsBase.h  AssnsIter.h  AssnsNode.h  BoolCache.h  CMakeLists.txt  CacheStreamers.cc  CacheStreamers.h  ConstPtrCache.h  DelayedReader.h  EDProduct.cc  EDProduct.h  EDProductGetter.cc  EDProductGetter.h  EDProductGetterFinder.h  FindMany.h.in  FindOne.h.in  GetProduct.h  GroupQueryResult.cc  HLTGlobalStatus.cc  HLTGlobalStatus.h  HLTPathStatus.cc  HLTPathStatus.h  HLTenums.h  PrincipalBase.cc  PrincipalBase.h  ProductPtr.h  ProductToken.h  Ptr.h  PtrVector.h  PtrVectorBase.cc  PtrVectorBase.h  RNGsnapshot.cc  RNGsnapshot.h  RefCore.cc  RefCore.h  RefCoreStreamer.cc  RefCoreStreamer.h  Sampled.h  (+12 more)
canvas/Persistency/Common/detail/: IPRHelper.h  ProductTypeIDs.h  aggregate.cc  aggregate.h  getWrapperTIDs.cc  getWrapperTIDs.h  is_handle.h  maybeCastObj.cc  maybeCastObj.h  setPtrVectorBaseStreamer.cc  setPtrVectorBaseStreamer.h  throwPartnerException.cc  throwPartnerException.h
canvas/Persistency/Provenance/: BranchChildren.cc  BranchChildren.h  BranchDescription.cc  BranchDescription.h  BranchID.h  BranchIDList.h  BranchIDListRegistry.cc  BranchIDListRegistry.h  BranchKey.cc  BranchKey.h  BranchMapper.cc  BranchMapper.h  BranchType.cc  BranchType.h  CMakeLists.txt  DictionaryChecker.cc  DictionaryChecker.h  EventAuxiliary.cc  EventAuxiliary.h  EventID.cc  EventID.h  EventRange.cc  EventRange.h  EventSelectionID.h  FileFormatVersion.cc  FileFormatVersion.h  FileIndex.cc  FileIndex.h  Hash.cc  Hash.h  HashedTypes.h  History.cc  History.h  IDNumber.h  MasterProductRegistry.cc  ModuleDescription.cc  ModuleDescription.h  ModuleDescriptionID.h  OldProductID.cc  OldProductID.h  (+70 more)
canvas/Persistency/Provenance/Compatibility/: BranchID.cc  BranchID.h  BranchIDList.h  History.cc  History.h  fwd.h  type_aliases.h
canvas/Persistency/Provenance/detail/: createProductLookups.cc  createProductLookups.h  createViewLookups.cc  createViewLookups.h
canvas/Persistency/RootDB/: CMakeLists.txt  MetaDataAccess.cc  MetaDataAccess.h  SQLErrMsg.cc  SQLite3Wrapper.cc
canvas/Persistency/StdDictionaries/: classes_def.xml
canvas/Persistency/WrappedStdDictionaries/: classes.h
canvas/Persistency_FilesForArt/Common/: DelayedReader.cc  DelayedReader.h
canvas/Persistency_FilesForArt/Provenance/: BranchIDListHelper.cc  BranchIDListRegistry.h  ProductMetaData.cc  ProductMetaData.h
canvas/Utilities/: BasicHelperMacros.h  CMakeLists.txt  DebugMacros.cc  DebugMacros.h  EventIDMatcher.cc  EventIDMatcher.h  Exception.cc  Exception.h  ExceptionMessages.cc  FirstAbsoluteOrLookupWithDotPolicy.h  ForEachAssociatedGroup.h  FriendlyName.cc  FriendlyName.h  GetCanvasReleaseVersion.h  GetPassID.h  HRRealTime.h  InputTag.cc  InputTag.h  Level.h  MallocOpts.cc  PluginSuffixes.cc  RangeAlgorithms.h  RegexMatch.cc  TestHelper.h  TypeID.cc  TypeID.h  UnixSignalHandlers.cc  WrappedTypeID.h  classes.h  ensurePointer.h  ensureTable.cc  fwd.h  parent_path.cc  uniform_type_name.cc  uniform_type_name.h  vectorTransform.h
canvas/Utilities/detail/: metaprogramming.h
canvas/Utilities_FilesForArt/: FirstAbsoluteOrLookupWithDotPolicy.cc  InputTag.cc  MallocOpts.h  RootHandlers.cc  RootHandlers.h  UnixSignalHandlers.h  fwd.h  unique_filename.cc
canvas/Utilities_FilesForArt/detail/: serviceConfigLocation.cc
canvas/Version/: CMakeLists.txt  GetReleaseVersion.cc.in  GetReleaseVersion.h
canvas/test/: CMakeLists.txt
canvas/test/Persistency/Common/: CMakeLists.txt  IntValues.h  IntValues_reflex.cc  MapOfVectors_t.cpp  MockRun.h  RefCore_t.cpp  SimpleEDProductGetter.h  TestHandle.h  Trie_t.cpp  TypeIDAssns_t.cc  aggregate_clhep_t.cc  aggregate_t.cc  aggregate_th1_t.cc  bad_ptr_vec_t.cc  bad_sampled_t.cc  classes.h  classes_def.xml  const_assns_iter_t.cc  for_each_group_t.cc  for_each_group_with_left_t.cc  maybeCastObj_t.cc  ptr_deduction_t.cc  ptr_hash_t.cc  ptr_t.cppunit.cc  ptrvector_t.cppunit.cc  sampled_t.cc  set_ptr_customization_t.cc  test_ConstAssnIter.cc  traits_t.cpp  wrapper_t.cc
canvas/test/Persistency/Provenance/: CMakeLists.txt  EventID_t.cc  EventRange_t.cc  FileIndex_t.cc  ModuleDescription_t.cpp  ParentageRegistry_t.cc  ProcessConfiguration_t.cpp  ProcessHistory_t.cpp  ProductToken_t.cc  RangeSet_t.cc  RootClassMapping_t.h  TimeStamp_t.cc  TypeTools_t.cc  TypeWithDict_t.cc  classes.h  classes_def.xml  fileIndex_t.cppunit.cc  testRunner.cpp
canvas/test/Utilities/: CMakeLists.txt  EventIDMatcher_t.cc  FriendlyName_t.cc  InputTag_t.cc  Level_t.cc  ParameterSet_get_artInputTag_t.cc  TypeID_t.cc  TypeNameBranchName_t.cc  TypeNameBranchName_t.h  classes.h  classes_def.xml  ensurePointer_t.cc  test_ForEachGroup.cc  test_ForEachGroupWithLeft.cc  uniform_type_name_test.cc
canvas/test/Version/: CMakeLists.txt
canvas/test/tbb/: CMakeLists.txt  tbb_pfor_01_t.cc  tbb_preduce_01_t.cc
doc/: concepts.md  (+3 more)
test/Persistency/Common/: CMakeLists.txt  aggregate_clhep_t.cc  aggregate_t.cc  ptrvector_t.cppunit.cc
(+65 files in other folders)
